[workspace]

members = [
    "aoc2023_utils",
    "aoc2023_day01",
    "aoc2023_day02",
    "aoc2023_day03",
    "aoc2023_day04",
    "aoc2023_day05",
    "aoc2023_day06",
    "aoc2023_day07",
    "aoc2023_day08",
    "aoc2023_day09",
    "aoc2023_day10",
    "aoc2023_day11",
]

resolver = "2"

[profile.dev]
opt-level = 0
