[package]
name = "day05a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day05a"
path = "src/day05a.rs"

[[bin]]
name = "aoc2023_day05b"
path = "src/day05b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
