[package]
name = "day06a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day06a"
path = "src/day06a.rs"

[[bin]]
name = "aoc2023_day06b"
path = "src/day06b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
