[package]
name = "day07a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day07a"
path = "src/day07a.rs"

[[bin]]
name = "aoc2023_day07b"
path = "src/day07b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
