[package]
name = "day08a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day08a"
path = "src/day08a.rs"

[[bin]]
name = "aoc2023_day08b"
path = "src/day08b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
