[package]
name = "day09a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day09a"
path = "src/day09a.rs"

[[bin]]
name = "aoc2023_day09b"
path = "src/day09b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
