[package]
name = "day10a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day10a"
path = "src/day10a.rs"

[[bin]]
name = "aoc2023_day10b"
path = "src/day10b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
