[package]
name = "day11a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day11a"
path = "src/day11a.rs"

[[bin]]
name = "aoc2023_day11b"
path = "src/day11b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
