[package]
name = "day13a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day13a"
path = "src/day13a.rs"

[[bin]]
name = "aoc2023_day13b"
path = "src/day13b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
