[package]
name = "day14a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day14a"
path = "src/day14a.rs"

[[bin]]
name = "aoc2023_day14b"
path = "src/day14b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
