[package]
name = "day15a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day15a"
path = "src/day15a.rs"

[[bin]]
name = "aoc2023_day15b"
path = "src/day15b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
