[package]
name = "day16a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day16a"
path = "src/day16a.rs"

[[bin]]
name = "aoc2023_day16b"
path = "src/day16b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
