[package]
name = "day17a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023_day17a"
path = "src/day17a.rs"

# [[bin]]
# name = "aoc2023_day17b"
# path = "src/day17b.rs"

[dependencies]

aoc2023_utils = { path = "../aoc2023_utils" }
